objects/TransactionLog__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <description>Stores details regarding the method, action or processNode that this log was created from</description>
        <inlineHelpText>Stores details regarding the method, action or processNode that this log was created from</inlineHelpText>
        <label>Method or Action</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgeDisplay__c</fullName>
        <description>A visual representation of the Days, Hours, Mins since the entry was created</description>
        <formula>&apos;Days: &apos; &amp; LPAD(TEXT(FLOOR(Age__c)), 4, &apos;0&apos;) &amp;
&apos;, Hours: &apos; &amp; LPAD(TEXT(FLOOR((Age__c - FLOOR(Age__c))*24)), 2, &apos;0&apos;) &amp;
&apos;, Mins: &apos; &amp; LPAD(TEXT(FLOOR((Age__c*24 - FLOOR(Age__c*24))*60)), 2, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A visual representation of the Days, Hours, Mins since the entry was created</inlineHelpText>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age of the log entry in days</description>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of the log entry in days</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Context__c</fullName>
        <description>Any additional context information. This will typically be integration Payload, record state, system state, currently consumed platform limits, etc</description>
        <inlineHelpText>Any additional context information that may assist with troubleshooting the generated issue.</inlineHelpText>
        <label>Context</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>A description of the issue that has occurred.</description>
        <inlineHelpText>A description of the issue that has occurred.</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <description>Stores the API name of either the Apex class, or Process that this log entry was created within.</description>
        <inlineHelpText>Stores the API name of either the Apex class, or Process that this log entry was created within.</inlineHelpText>
        <label>Class or Process</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceDisplay__c</fullName>
        <description>DISPLAY ONLY, with basic recognition of Lightning page URLs

This provides a UI redirect to any related record. This may be a system record, or could store a process id (such as a batch Job ID).

IF( ISBLANK( Reference__c),
&apos;&apos;,
HYPERLINK(
IF( $User.UIThemeDisplayed=&apos;Theme4d&apos;,
&apos;#/sObject/&apos;,
&apos;/&apos;
) &amp; Reference__c,
Reference__c,
&apos;_self&apos;
)
)</description>
        <formula>IF( ISBLANK(Reference__c),
&apos;&apos;,
HYPERLINK(
&apos;/&apos; &amp; Reference__c,
Reference__c,
&apos;_self&apos;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This provides a UI redirect to any related record. This may be a system record, or could store a process id (such as a batch Job ID).</inlineHelpText>
        <label>Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>Will be populated when a record is related to the error. Note the value stored is check to see if it is a valid ID, but wont be checked to see if the related record exists.</description>
        <inlineHelpText>This provides a UI redirect to any related record. This may be a system record or could store a process id (such as a batch Job ID).</inlineHelpText>
        <label>Reference ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>A clear definition of how important this log entry is. Traditionally &quot;Warning&quot; infers operation can continue, where as &quot;Error&quot; means that the intended operation had to be aborted.</description>
        <inlineHelpText>A clear definition of how important a raised log is within the system.</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>Where applicable, this will show the process/action call hierarchy that resulted in the current issue.</description>
        <inlineHelpText>Where applicable, this will show the process/action call hierarchy that resulted in the current issue.</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>A description of the issue that has occurred.</description>
        <inlineHelpText>A description of the issue that has occurred.</inlineHelpText>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the user details of the operator who triggered this log entry. This is used over the createdBy field as errors may be created through means that hide the original users details (such as &quot;Automated User&quot;, or packaged code run by upgrades.</description>
        <inlineHelpText>Stores the user details of the operator who triggered this log entry</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transaction_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction Log</label>
    <nameField>
        <displayFormat>L-{000000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>